// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Txt Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-fKgJPI jlSUcY sc-bCwfaz ecGcZi"
    >
      Standard
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Txt In Color 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-fKgJPI jlSUcY sc-bCwfaz UbDLY"
    >
      Colored text
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Txt Span Component 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <span
      class="sc-fKgJPI udtlg sc-iwajpm ikqdDt"
    >
      Space   is   preserved
    </span>
  </div>
</div>
`;

exports[`Storyshots Core/Txt Styled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-fKgJPI jRWHZC sc-bCwfaz ecGcZi"
    >
      Styled text
    </div>
  </div>
</div>
`;
